# FinanceOpenResearch

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
common/config/: paths.py
common/database/: db_task_manager.py  postgres_database.py
common/r_helper/: logger.R  output_file.R  r_package_helper.py
common/utils/: data_etl_helper.py  logging.py
common/utils/data_conversion/: __init__.py  csv_to_parquet.py
config/: paths.py
papers/ml_forecast_estimate_error/scripts/: agg_universe.py  get_affactor.py
papers/ml_forecast_estimate_error/src/: universe_append_on_affactor.py  universe_creater.py
papers/paper1_identifier/: README.md
papers/paper1_identifier/paper/: main.tex
papers/paper1_identifier/scripts/: test.py
papers/paper1_identifier/src/: analysis.py  test.py
papers/paper1_identifier/src/Rsrc/: msci.R  refinitiv.R
research/brokerage_culture/input_data/: prompts.txt  prompts_question_agg.txt  strucutred_output.json  strucutred_output_analyst_charisma.json
research/brokerage_culture/scripts/: run_batch_of_batch.py  run_preprocess.py  run_preprocess_agg_broker.py  run_preprocess_per_q_analysts_charisma.py  track_retrieve_batch_progress.py
research/brokerage_culture/tex_scripts/: analyze.py  analyze_broker_agg.py  main.tex  table.tex  table_broker_agg.tex  table_by_year.tex
research/ml_forecast_estimate_error/data/: dataitemid.json
research/ml_forecast_estimate_error/scripts/: caculate_technical.py  get_universe_earnings_estimates_guidance.py  test_connect_db.py
research/paper1_identifier/src/: test.py
scripts/: setup.sh
(+8 files in other folders)
